# ZRC_PARR

./: .gitignore  MainWindow.py  MainWindow.ui  Serial_CRC.py  Serial_CRC_wACK.py  config.ini  config.json  controllers.py  graphics.py  ground_rdfinder.py  gstation.py  gui.py  main.ini  main.kv  main.py  main_graphics.py  main_graphics_buffered.py  main_graphics_buffered.py~  main_graphics_mod.py  protocolwrapper.py  rdfinder.py  resources.py  resources.qrc  serial_send.py  settings_json.py  test_serialize.py  test_udp.py  test_waterfal.grc  test_waterfall.py  testform  uav_rdfinder.py  zarr.py  zrc_base.py  zrc_core.py
Pi Code/: RDF_Detection_No_GUI.py  RDF_Detection_No_GUI.py~  RDF_Format.py  Serial_CRC.py  uav_rdfinder.py  zrc_base.py  zrc_core.py
Pi Code/Field Recordings/: ant_rec.grc  ant_rec.py
Pi Code/Startup Script - Goes into etc folder/: profile
Pi Code/gr-autoSNR/: CMakeLists.txt
Pi Code/gr-autoSNR/cmake/Modules/: autoSNRConfig.cmake
Pi Code/gr-autoSNR/docs/: README.autoSNR
Pi Code/gr-autoSNR/docs/doxygen/: Doxyfile.in
Pi Code/gr-autoSNR/docs/doxygen/other/: group_defs.dox  main_page.dox
Pi Code/gr-autoSNR/grc/: CMakeLists.txt  autoSNR_cw_pulse_detect.xml
Pi Code/gr-autoSNR/include/autoSNR/: CMakeLists.txt  api.h
Pi Code/gr-autoSNR/lib/: CMakeLists.txt  qa_autoSNR.cc  qa_autoSNR.h  test_autoSNR.cc
Pi Code/gr-autoSNR/python/: CMakeLists.txt  __init__.py  cw_pulse_detect.py
Pi Code/gr-autoSNR/swig/: CMakeLists.txt  autoSNR_swig.i
Pi Code/gr-collar_detect/: CMakeLists.txt
Pi Code/gr-collar_detect/docs/doxygen/: Doxyfile.in
Pi Code/gr-collar_detect/grc/: collar_detect_Burst_Detection.xml
Pi Code/gr-collar_detect/include/collar_detect/: CMakeLists.txt  api.h
Pi Code/gr-collar_detect/lib/: CMakeLists.txt  qa_collar_detect.cc  qa_collar_detect.h  test_collar_detect.cc
Pi Code/gr-collar_detect/python/: Burst_Detection.py  CMakeLists.txt  __init__.py  collar_detect.py
Pi Code/gr_detect/cmake/Modules/: collar_detectConfig.cmake
Pi Code/gr_detect/docs/: README.collar_detect
Pi Code/gr_detect/docs/doxygen/other/: group_defs.dox  main_page.dox
Pi Code/gr_detect/grc/: CMakeLists.txt  collar_detect_collar_detect.xml
Pi Code/gr_detect/python/: CMakeLists.txt  collar_detect.py
Pi Code/gr_detect/swig/: CMakeLists.txt  collar_detect_swig.i
Widgets/: ParamDisplayWidget.py  ReceiverParams.kv  ReceiverParams.py  StatusWidget.kv  StatusWidget.py
tests/: gnd_mock.py  log_test.out  serial_test.py  zrc_base.py
